# sekai-monorepo

./: .gitignore  bot.py
async_pjsekai/: api.py  asset.py  asset_bundle.py  client.py  utilities.py
async_pjsekai/models/: master_data.py
libs/async-pjsekai/: README.md  pyproject.toml
libs/async-pjsekai/async_pjsekai/: api.py  asset.py  asset_bundle.py  client.py  exceptions.py  live.py  utilities.py
libs/async-pjsekai/async_pjsekai/enums/: enums.py  information.py  platform.py  tutorial_status.py  unknown.py
libs/async-pjsekai/async_pjsekai/models/: asset_bundle_info.py  converters.py  game_version.py  information.py  master_data.py  system_info.py
libs/sus-parser/: pyproject.toml
libs/sus-parser/sus_parser/: pjsekai.py  sus.py  umiguri.py  utils.py
libs/typed-intervaltree/: LICENSE  README.md  pyproject.toml
libs/typed-intervaltree/typed_intervaltree/: __init__.py  interval.py  interval_tree.py  node.py  sorted_dict.py  types.py
projects/pjsekai-bot/: alembic.ini  main.py  pyproject.toml
projects/pjsekai-bot/bot/bot/: client.py
projects/pjsekai-bot/bot/cogs/: music.py  pjsekai_client.py
projects/pjsekai-bot/bot/exts/: channel.py  command.py  dump.py  ext_loader.py  moderate.py  music.py  pjsekai_client.py
projects/pjsekai-bot/bot/models/: card.py  discord.py  game_character.py  music.py  music_vocal.py  task.py
projects/pjsekai-bot/bot/schema/: schema.py
projects/pjsekai-bot/bot/tasks/: music.py
projects/pjsekai-bot/bot/utils/: asset.py  crop.py  discord.py
projects/pjsekai-bot/migrations/: env.py
projects/pjsekai-bot/migrations/versions/: 9766e4c4ea5d_.py  98cd2eb81aa5_.py
projects/sus-viewer/: main.py  pyproject.toml
