[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pjsekai-bot"
version = "0.0.1.dev0"
description = "pjsekai info discord bot"
repository = "https://github.com/TheerapakG/sekai-monorepo"
license = "MIT"
authors = [
    "TheerapakG <theerapakg@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"

"discord.py" = "^2.2.2"
GitPython = "^3.1.11"
jycm = "^1.5.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
UnityPy = "^1.9.28"
async-pjsekai = { path="../../libs/async-pjsekai", develop=true }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pykakasi = "^2.2.1"
meilisearch = "^0.30.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
alembic = "^1.13.1"
alembic-postgresql-enum = "^1.1.2"
jq = "^1.7.0"
